<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customListItemRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    android:layout_marginBottom="10dp"
    android:background="@android:color/white"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/customListItemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/customListItemImage"
        android:layout_alignBottom="@id/customListItemImage"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@id/customListItemImage"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/customListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/customListItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_item_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:maxLines="2"
            android:ellipsize="end" />
    </LinearLayout>

</RelativeLayout>
