<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/userProfileServerRoot"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/userProfileServerHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/profile_details_server"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <View
        android:id="@+id/userProfileServerDividerOne"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignBottom="@id/userProfileServerHeading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/translucent_gray" />

    <EditText
        android:id="@+id/userProfileServerIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileServerDividerOne"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:hint="@string/yourId"
        android:inputType="number"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/userProfileServerNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileServerIdInput"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:hint="@string/yourName"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/userProfileServerAddressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileServerNameInput"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:hint="@string/yourAddress"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/userProfileServerButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileServerAddressInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/userProfileServerInsertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:stateListAnimator="@null"
            android:text="@string/insert"
            android:textColor="@color/white" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/userProfileServerRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink_700"
            android:stateListAnimator="@null"
            android:text="@string/refresh"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:id="@+id/userProfileServerDividerTwo"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/userProfileServerButtonContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@color/translucent_gray" />

    <TextView
        android:id="@+id/userProfileServerDataHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileServerDividerTwo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/data_from_server"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/userProfileServerListMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/userProfileServerDataHeading"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:divider="@color/translucent_gray"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:overScrollFooter="@color/transparent"
        android:overScrollHeader="@color/transparent"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@color/blue_200" />

</RelativeLayout>