<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingHorizontal="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/purple_500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="60dp">

        <ImageView
            android:id="@+id/signupUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sign_image"
            android:contentDescription="Logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/signupUserImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/signupNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourName"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signupEmailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourEmail"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupNameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signupPhoneInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourPhone"
            android:inputType="number"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupEmailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signupPasswordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourPassword"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupPhoneInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/constraintGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderText"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/signupPasswordInput"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/constraintCheckBoxGenderContainer"
            android:layout_width="0dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintGenderLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/constraintRadioMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/maleText"/>

            <RadioButton
                android:id="@+id/constraintRadioFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/female"/>

            <RadioButton
                android:id="@+id/constraintRadioOther"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="Other"/>
        </RadioGroup>

        <TextView
            android:id="@+id/constraintCountryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/CountryText"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxGenderContainer"
            />

        <Spinner
            android:id="@+id/constraintCountrySpinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/black"
            android:entries="@array/country_list"
            android:hapticFeedbackEnabled="true"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintCountryLabel"
            app:layout_constraintWidth_percent="0.6"
            />

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTerm"
            android:text="I accept all terms and conditions"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/constraintCountrySpinner"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Submit"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTerm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? Login"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/signupButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
