<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingHorizontal="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/purple_500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="60dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/signupUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sign_image"
            android:contentDescription="Logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpText"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/signupUserImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signupEmailInput"
            android:layout_marginTop="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourEmail"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signupPasswordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yourPassword"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signupEmailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTerm"
            android:text="Remember me"
            app:layout_constraintTop_toBottomOf="@id/signupPasswordInput"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTerm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? SignUp"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/signupButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
